# Hybrid-Copyediting-System

./: .gitignore  README.md
ets-checker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
ets-checker/backend/: pyproject.toml  test_document.py  test_edge_cases.py
ets-checker/backend/ets_checker/: ets_profile.py  models.py  server.py
ets-checker/backend/ets_checker/exporter/: __init__.py  _comments_xml.py  anchor.py  annotate.py
ets-checker/backend/ets_checker/frontend_dist/: index.html
ets-checker/backend/ets_checker/frontend_dist/assets/: index-BErtPxiD.js  index-DoJ8C1Cp.css
ets-checker/backend/ets_checker/parser/: citations.py  docx_parser.py  figures.py  metadata.py  paragraphs.py  references.py  sections.py
ets-checker/backend/ets_checker/rules/: __init__.py  citation.py  figures_tables.py  fonts.py  layout.py  reference.py  reference_links.py  runner.py  structure.py
ets-checker/backend/tests/: conftest.py  test_annotate.py  test_api.py  test_parser.py  test_rules.py
ets-checker/backend/tests/fixtures/: broken_abstract.docx  broken_margins.docx
ets-checker/docs/: annotated-docx-export.md
ets-checker/frontend/: index.html  package-lock.json  package.json
ets-checker/frontend/src/: App.vue  api.ts  env.d.ts  main.ts  types.ts
ets-checker/frontend/src/components/: FileUploader.vue  ProgressIndicator.vue  ReportCategory.vue  ReportItem.vue  ReportSummary.vue  SeverityBadge.vue
